# rp-settings

./: .clang-tidy  .clang-tidy-ignore  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build-examples.sh  pin-pico-sdk.sh  switch-pico-sdk.sh
examples/: CMakeLists.txt  main.c
src/: CMakeLists.txt  settings.c  settings.h
